# llm-emotions-coding-agents

./: .gitignore  README.md  pyproject.toml  requirements.txt
blog/: draft.md
configs/: agent_deepseek_coder_v2_lite.yaml  agent_devstral_small_2507.yaml  agent_qwen3_coder_30b_a3b.yaml  agent_qwen_coder_7b.yaml  agent_starcoder2_7b.yaml  jarvis_qwen_coder_7b.yaml  main_deepseek_coder_6_7b.yaml  main_starcoder2_7b.yaml  smoke_qwen_coder_0_5b.yaml
results/agent-runs/deepseek-coder-v2-lite/: agent_activation_scores.csv  agent_attempts.csv  agent_attempts.jsonl  agent_runs.csv  emotion_directions.npz  manifest.json  summary.json
results/agent-runs/devstral-small-2507/: agent_activation_scores.csv  agent_attempts.csv  agent_attempts.jsonl  agent_runs.csv  emotion_directions.npz  manifest.json  summary.json
results/agent-runs/qwen-coder-7b/: agent_activation_scores.csv  agent_attempts.csv  agent_attempts.jsonl  agent_runs.csv  manifest.json  summary.json
results/agent-runs/qwen3-coder-30b-a3b/: agent_activation_scores.csv  agent_attempts.csv  agent_attempts.jsonl  (+4 more)
scripts/: compare_agent_runs.py  compare_runs.py  evaluate_generations.py  make_blog_excalidraw_plots.py  rescore_agent_harness.py  run_agent_harness.py  run_experiment.py
src/emotion_coding_agents/: __init__.py  agent_compare.py  agent_harness.py  compare.py  config.py  data.py  evaluation.py  experiment.py  metrics.py  modeling.py  plots.py
tests/: test_agent_compare.py  test_agent_harness.py  test_compare.py  test_data.py  test_evaluation.py  test_metrics.py  test_modeling.py  test_plots.py
(+52 files in other folders)
