[project]
name = "emotion-coding-agents"
version = "0.1.0"
description = "Emotion-concept activation experiments for open coding language models"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=1.0",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "safetensors>=0.4",
  "mistral-common>=1.7.0",
  "transformers>=4.46",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
